--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,20 @@
 	<name>Project_NewbeeSchool</name>
 	<packaging>war</packaging>
 	<version>1.0.0-BUILD-SNAPSHOT</version>
+	
+	<!-- 오라클드라이버 저장소 등록 -->
+  	<repositories>
+    	<repository>
+         	<id>oracle</id>
+         	<name>Oracle JDBC Repository</name>
+         	<url>http://maven.jahia.org/maven2</url>
+    	</repository>
+    </repositories>
+   
+   
 	<properties>
 		<java-version>1.6</java-version>
-		<org.springframework-version>3.1.1.RELEASE</org.springframework-version>
+		<org.springframework-version>4.1.6.RELEASE</org.springframework-version>
 		<org.aspectj-version>1.6.10</org.aspectj-version>
 		<org.slf4j-version>1.6.6</org.slf4j-version>
 	</properties>
@@ -32,6 +43,38 @@
 			<artifactId>spring-webmvc</artifactId>
 			<version>${org.springframework-version}</version>
 		</dependency>
+		
+		            
+      	<dependency>
+          	<groupId>org.springframework</groupId>
+          	<artifactId>spring-jdbc</artifactId>
+          	<version>${org.springframework-version}</version>
+      	</dependency>
+      	
+      	 <dependency>
+           <groupId>com.oracle</groupId>
+           <artifactId>ojdbc6</artifactId>
+           <version>11.1.0.7.0</version>
+        </dependency>
+     
+        <dependency>
+          <groupId>org.apache.commons</groupId>
+          <artifactId>commons-dbcp2</artifactId>
+          <version>2.1</version>
+      </dependency>
+      
+      <!-- MyBatis -->
+      <dependency>
+         <groupId>org.mybatis</groupId>
+         <artifactId>mybatis</artifactId>
+         <version>3.2.8</version>
+      </dependency>
+      
+      <dependency>
+          <groupId>org.mybatis</groupId>
+          <artifactId>mybatis-spring</artifactId>
+          <version>1.2.2</version>
+      </dependency>
 				
 		<!-- AspectJ -->
 		<dependency>
@@ -82,6 +125,13 @@
 			</exclusions>
 			<scope>runtime</scope>
 		</dependency>
+		
+		<!-- Json 라이브러리 -->
+     	<dependency>
+        	<groupId>com.fasterxml.jackson.core</groupId>
+        	<artifactId>jackson-databind</artifactId>
+        	<version>2.4.4</version>
+      	</dependency>
 
 		<!-- @Inject -->
 		<dependency>
@@ -138,8 +188,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.5.1</version>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                     <compilerArgument>-Xlint:all</compilerArgument>
                     <showWarnings>true</showWarnings>
                     <showDeprecation>true</showDeprecation>
